Render topic page white space correctly

--- a/src/client/dashboard/student/css/topic-page.less
+++ b/src/client/dashboard/student/css/topic-page.less
@@ -76,6 +76,7 @@ body {
     margin: auto;
     line-height: 2;
     font-size: 17px;
+    white-space: pre-wrap;
       
     h1 {
       font-size: 28px;
